--- a/app/src/main/res/layout/activity_solver.xml
+++ b/app/src/main/res/layout/activity_solver.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fm.apps.kirtsim.nonogramcheat.SolverActivity">
+    tools:context="fm.apps.kirtsim.nonogramcheat.solving.SolverActivity">
 
     <FrameLayout
         android:id="@+id/upperFragmentHolder"
