--- a/app/src/main/res/layout/fragment_gallery_list.xml
+++ b/app/src/main/res/layout/fragment_gallery_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fm.apps.kirtsim.nonogramcheat.GalleryListFragment">
+    tools:context="fm.apps.kirtsim.nonogramcheat.gallery.GalleryListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/puzzlePicsRV"
