--- a/app/src/main/res/layout/fragment_puzzle_size.xml
+++ b/app/src/main/res/layout/fragment_puzzle_size.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fm.apps.kirtsim.nonogramcheat.PuzzleSizeFragment">
+    tools:context="fm.apps.kirtsim.nonogramcheat.user_input.PuzzleSizeFragment">
     <TextView
         android:id="@+id/puzzle_size_title"
         android:text="@string/puzzle_size_title"
