--- a/app/src/main/res/layout/fragment_slide_show.xml
+++ b/app/src/main/res/layout/fragment_slide_show.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fm.apps.kirtsim.nonogramcheat.SlideShowFragment">
+    tools:context="fm.apps.kirtsim.nonogramcheat.gallery.SlideShowFragment">
 
     <TextView
         android:id="@+id/labelCount"
