--- a/app/src/main/res/layout/fragment_gallery_list.xml
+++ b/app/src/main/res/layout/fragment_gallery_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="fm.apps.kirtsim.nonogramcheat.gallery.GalleryListFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/puzzlePicsRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
