--- a/app/src/main/res/layout/fragment_slide_show.xml
+++ b/app/src/main/res/layout/fragment_slide_show.xml
@@ -20,9 +20,9 @@
         android:layout_marginBottom="25dp"
         android:layout_marginStart="15dp"
         android:layout_gravity="bottom|start"/>
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </FrameLayout>
